fixed all the flickering errors. the reviews module looks a little funky now

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -80,3 +80,11 @@
     border-right: @width/2 solid transparent;
     border-bottom: @height solid @color;
 }
+
+.stop-flicker () {
+    transform: translateZ(.1px);
+    -ms-transform: translateZ(.1px);
+    -webkit-transform: translateZ(.1px);
+    -o-transform: translateZ(.1px);
+    -moz-transform: translateZ(.1px);
+}
